c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_type_declarations/duplicate_union_def.c
/* YOu can't declare the same union type twice. */

int main(void) {
    union u {int a;};
    union u {int a;}; // illegal - duplicate declaration
    return 0;
}